# cmip7-experiment-description-scratch

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMIP6_Experiments_v224.xlsx  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: NAVIGATION.md  abrupt-2xCO2.md  abrupt-4xCO2.md  historical.md  index.md  picontrol.md
docs/experiment_overviews/: 1pctCO2-bgc.md  1pctCO2-rad.md  1pctCO2.md  G7-15K-SAI.md  Initialised-prediction-2025-2036.md  LIGabrupt.md  SSPX-SLCF.md  abrupt-0p5CO2.md  abrupt-2xCO2.md  abrupt-4xCO2.md  amip-p4k.md  amip-piForcing.md  amip.md  esm-flat10-cdr.md  esm-flat10-zec.md  esm-hist.md  esm-piControl.md  esm-scen7-h-ext-os.md  esm-scen7-h-ext.md  esm-scen7-h.md  esm-scen7-l-ext.md  esm-scen7-l.md  esm-scen7-m-ext.md  esm-scen7-m.md  esm-scen7-ml-ext.md  esm-scen7-ml.md  esm-scen7-vlho-ext.md  esm-scen7-vlho.md  esm-scen7-vllo-ext.md  esm-scen7-vllo.md  hist-GHG.md  hist-aer.md  hist-nat.md  hist-piAer.md  hist-piSLCF.md  historical.md  land-hist.md  piClim-4xCO2.md  piClim-CH4.md  piClim-HC.md  (+23 more)
scripts/: fill-out-experiment-pages-sections.py
src/local/: __init__.py
