[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com"},
]
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.6.1",
    "pre-commit>=3.3.1",
]
name = "prototype"
version = "0.1.0"
description = "Scratch repository for testing out building of CMIP7 experiment definition docs."
readme = "README.md"

[tool.uv]
package = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
